# reusable_intelligence

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_IMPLEMENTATION_SUMMARY.md  AGENT_NATIVE_PRINCIPLES.md  AUTH_IMPLEMENTATION_PLAN.md  CLAUDE.md  COMPLETE_TEST_GUIDE.md  DEPLOYMENT.md  HACKATHON_III_ROADMAP.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_GUIDE.md  check-setup.ps1  docker-compose.yaml  kill-agents.bat  kill-all-agents.ps1  package-lock.json  package.json  start-agents.bat  test-agents.ps1  test-all-agents.bat  test-comprehensive.json  test-mastery.json  test-models.py  test_complete_system.py  test_imports.py  test_new_agents.py
backend/: pyproject.toml  render.yaml  requirements-deploy.txt  requirements-minimal.txt  requirements.txt  server.py
backend/agents/code_review/: Dockerfile  __init__.py  config.py  main.py  models.py  requirements.txt  routes.py
backend/agents/concepts/: Dockerfile  __init__.py  config.py  main.py  models.py  requirements.txt  routes.py
backend/agents/debug/: Dockerfile  __init__.py  config.py  main.py  models.py  requirements.txt  routes.py
backend/agents/exercise/: Dockerfile  __init__.py  config.py  main.py  models.py  requirements.txt  routes.py
backend/agents/progress/: Dockerfile  __init__.py  config.py  main.py  models.py  requirements.txt  routes.py
backend/shared/: __init__.py  claude_client.py  config.py  dapr_client.py  health_checks.py  kafka_client.py  logging_config.py  metrics.py  models.py  openai_client.py
backend/websocket-bridge/: Dockerfile  __init__.py  main.py  requirements.txt
(+143 files in other folders)
